# AnomalyEngine

./: CMakeLists.txt  Entry.cpp  README.md  main.cpp
Engine/: Application.cpp  Application.h  CMakeLists.txt
Engine/ECS/: CompPtr.h  Component.cpp  Component.h  ComponentConcept.h  ComponentRegistry.cpp  ComponentRegistry.h  Entity.cpp  Entity.h  Registry.cpp  Registry.h
Engine/EntryPoint/: Application.cpp  Application.h
Engine/Experiments/: TypeTree.h
Game/: CMakeLists.txt  Main.cpp
Game/Components/: SillyTestComponent.cpp  SillyTestComponent.h
